[tool.poetry]
name = "position5"
version = "0.3.3"
description = "Discord Bot"
authors = ["Arpit Choudhary <arpitkumar147@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.4.0"
Pillow = "^8.2.0"
asyncpraw = "^7.2.0"
"discord.py" = {extras = ["voice"], version = "^1.7.2"}
python-dotenv = "^0.15.0"
cricapi = "^1.2"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
python-dateutil = "^2.8.1"
glitch-this = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
skip-string-normalization = false
